# IPTV

./: .gitignore  ChannelLogoFinder.py  IPTV_Master.m3u  M3U_list.py  M3U_list.txt  README.md  Sports_Playlist.m3u  SyncMasterStreams.py  VTV_sort.py  Vietnam_HBO_Final.m3u  Xtream_List.txt  Xtreamlist2M3u.py  channel_logos.json  generate-icons.py  output.m3u  package-lock.json  package.json  phimtv-release.b64  sign-exe.py
.github/workflows/: build-app.yml  build.yml  update_iptv.yml
src/: cache.js  icon-lite.js  index.html  mobile.css  performance.js  platform.js  script.js  style.css  sw.js
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: clean_uninstall.nsh  installer.nsh
src-tauri/src/: lib.rs  main.rs
src/fonts/: material-symbols.css
src/phim/: phim.css  phim.html  phim.js
src/phim/css/: base.css  detail.css  header.css  hero.css  layout.css  modals.css  player.css  responsive.css
src/phim/js/: api.js  cards.js  detail.js  home.js  main.js  player.js  utils.js
src/truyenhinh/: truyenhinh.css  truyenhinh.html  truyenhinh.js
src/truyenhinh/css/: base.css  channels.css  header.css  hero.css  modals.css  player.css  responsive.css
src/truyenhinh/js/: cache.js  channels.js  config.js  main.js  navigation.js  player.js  utils.js
