[package]
name = "phimtvapp"
version = "0.1.0"
description = "Phim.tv - Ứng dụng Giải trí Đa phương tiện"
authors = ["PhimTV Admin"]
edition = "2021"

[lib]
name = "phimtvapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

# ĐOẠN THÊM MỚI: Tối ưu hóa tốc độ biên dịch khi đang lập trình (lệnh dev)
[profile.dev]
opt-level = 0 # Mức 0: Bỏ qua tối ưu hóa dung lượng để biên dịch nhanh nhất có thể
debug = true  # Giữ lại toàn bộ thông tin gỡ lỗi để dễ dàng tìm lỗi
