[package]
name = "phimtvapp"
version = "0.1.0"
description = "Phim.tv - Ứng dụng Giải trí Đa phương tiện"
authors = ["PhimTV Admin"]
edition = "2021"

[lib]
name = "phimtvapp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-http = { version = "2.0.0", features = ["unsafe-headers"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
tiny_http = "0.12"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
urlencoding = "2.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.dev]
opt-level = 0
debug = true 
